fixed the identified sonar lint issues