@@ -4,7 +4,6 @@ import com.customer.statementfileprocessor.bean.CsvRecord;
 import com.customer.statementfileprocessor.bean.Record;
 import com.customer.statementfileprocessor.bean.StatementFileInput;
 import com.customer.statementfileprocessor.exception.InvalidFileFormatException;
-import com.customer.statementfileprocessor.exception.StatementProcessorExceptionHandler;
 import com.opencsv.bean.CsvToBeanBuilder;
 
 import java.io.BufferedReader;
@@ -12,7 +11,6 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CsvProcessor implements FileProcessor {
     @Override
@@ -36,18 +34,18 @@ public class CsvProcessor implements FileProcessor {
         statementFileInput.setRecordInputList(csvStatementRecords
                 .stream()
                 .map(this::mapCsvRecord)
-                .collect(Collectors.toList()));
+                .toList());
         return statementFileInput;
     }
 
     private Record mapCsvRecord(CsvRecord csvRecord) {
-        Record record;
+        Record recordInput;
         try {
-            record = new Record(Long.parseLong(csvRecord.getReference()),csvRecord.getAccountNumber(),csvRecord.getDescription(),
+            recordInput = new Record(Long.parseLong(csvRecord.getReference()),csvRecord.getAccountNumber(),csvRecord.getDescription(),
                     new BigDecimal(csvRecord.getStartBalance()),new BigDecimal(csvRecord.getMutation()),new BigDecimal(csvRecord.getEndBalance()));
         } catch (NumberFormatException nfe) {
             throw new InvalidFileFormatException("Can't map csv data. Please check the input");
         }
-        return record;
+        return recordInput;
     }
 }
