@@ -7,41 +7,42 @@ import com.customer.statementfileprocessor.entity.RecordEntity;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RecordValidator {
-
+    private RecordValidator() {
+        throw new IllegalStateException("Utility class, not meant to be instantiated");
+    }
     public static List<FailedRecordBean> validate(StatementFileInput input) {
         return input.getRecordInputList()
                 .parallelStream()
-                .filter(record -> isReferenceNotUnique(input, record) || isEndBalanceNotCorrect(record))
+                .filter(recordInput -> isReferenceNotUnique(input, recordInput) || isEndBalanceNotCorrect(recordInput))
                 .map(RecordValidator::createValidationResult)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public static boolean isReferenceNotUnique(StatementFileInput input, Record record) {
-        return Collections.frequency(input.getRecordInputList(), record) > 1;
+    public static boolean isReferenceNotUnique(StatementFileInput input, Record recordInput) {
+        return Collections.frequency(input.getRecordInputList(), recordInput) > 1;
     }
 
-    public static boolean isEndBalanceNotCorrect(Record record) {
-        return !record.getStartBalance().add(record.getMutation()).equals(record.getEndBalance());
+    public static boolean isEndBalanceNotCorrect(Record recordInput) {
+        return !recordInput.getStartBalance().add(recordInput.getMutation()).equals(recordInput.getEndBalance());
     }
 
-    private static FailedRecordBean createValidationResult(Record record) {
+    private static FailedRecordBean createValidationResult(Record recordInput) {
         FailedRecordBean failedRecordBean = new FailedRecordBean();
-        failedRecordBean.setReference(record.getReference());
-        failedRecordBean.setDescription(record.getDescription());
+        failedRecordBean.setReference(recordInput.getReference());
+        failedRecordBean.setDescription(recordInput.getDescription());
         return failedRecordBean;
     }
 
-    public static RecordEntity presistValidResult(Record record) {
+    public static RecordEntity presistValidResult(Record recordInput) {
         RecordEntity recordEntity = new RecordEntity();
-        recordEntity.setReference(record.getReference());
-        recordEntity.setEndBalance(record.getEndBalance());
-        recordEntity.setStartBalance(record.getStartBalance());
-        recordEntity.setDescription(record.getDescription());
-        recordEntity.setMutation(record.getMutation());
-        recordEntity.setAccountNumber(record.getAccountNumber());
+        recordEntity.setReference(recordInput.getReference());
+        recordEntity.setEndBalance(recordInput.getEndBalance());
+        recordEntity.setStartBalance(recordInput.getStartBalance());
+        recordEntity.setDescription(recordInput.getDescription());
+        recordEntity.setMutation(recordInput.getMutation());
+        recordEntity.setAccountNumber(recordInput.getAccountNumber());
         return recordEntity;
     }
 }
